Bug 506007 - Inactive inner window handling - impossible to click if click is not configured to pass
Summary: Inactive inner window handling - impossible to click if click is not configur...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.4.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-06-22 22:14 UTC by pawel.veselov
Modified: 2025-06-26 02:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pawel.veselov 2025-06-22 22:14:50 UTC
SUMMARY

After upgrading to 6.4.0, configuring mouse clicks with other than "... and pass click" options makes them unusable for Plasma components and pop-up menus.

STEPS TO REPRODUCE
1. Configure (for example) left click for Inactive Inner Window Actions without "...and pass click", apply configuration
2. LMB on any of : Task Manager, Application Launcher, System Tray - no reaction to click
3. LMB on a pop-up menu item, i.e., in Gwenview - no reaction to click

OBSERVED RESULT
No click reaction for cases outlined in "Steps to Reproduce"

EXPECTED RESULT
Normal click reaction

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.8.3
Kernel Version: 6.14.11-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland


ADDITIONAL INFORMATION
Same problem with Flatpak apps that use Qt 6.9.0, btw.
Apologies if I'm filing this against a wrong category/app, the best I can understand this is Kwin's responsibility, as the behavior is controlled by Kwin.
Pleaset LMK if there is anything I can help with.
Comment 2 Bug Janitor Service 2025-06-23 07:34:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7800
Comment 3 Vlad Zahorodnii 2025-06-23 12:54:51 UTC
Git commit e8dad997fae98e3c0c40653667dd22a002747556 by Vlad Zahorodnii.
Committed on 23/06/2025 at 12:22.
Pushed by vladz into branch 'master'.

Fix Window::mousePressCommandConsumesEvent() for "activate" action

Amends 87bb2447e5328a5e6f4d066fcfea5ff38a02139d.

According to the boolean algebra rules, if the `a || b` expression is
negated, the result will be `!a && !b`.

In the prior version, the MouseActivate option used to correspond to
`isActive() || !rules()->checkAcceptFocus(acceptsFocus())` so following
the boolean algebra rules, the `||` operator should be changed to `&&`.

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/e8dad997fae98e3c0c40653667dd22a002747556
Comment 4 Vlad Zahorodnii 2025-06-23 19:05:29 UTC
Git commit becb3abe9a1c85a9ec533f202ae3c2b2d06ed2d1 by Vlad Zahorodnii.
Committed on 23/06/2025 at 17:42.
Pushed by vladz into branch 'Plasma/6.4'.

Fix Window::mousePressCommandConsumesEvent() for "activate" action

Amends 87bb2447e5328a5e6f4d066fcfea5ff38a02139d.

According to the boolean algebra rules, if the `a || b` expression is
negated, the result will be `!a && !b`.

In the prior version, the MouseActivate option used to correspond to
`isActive() || !rules()->checkAcceptFocus(acceptsFocus())` so following
the boolean algebra rules, the `||` operator should be changed to `&&`.


(cherry picked from commit e8dad997fae98e3c0c40653667dd22a002747556)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/becb3abe9a1c85a9ec533f202ae3c2b2d06ed2d1